force-app/main/default/objects/Notification_Handler__c/Notification_Handler__c.object-meta.xml
<CustomObject>
    <description>This is to manage/organise the publish time of customer notification</description>
    <label>Notification Handler</label>
    <nameField>
        <displayFormat>NH-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Handler</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>