force-app/main/default/objects/Notification_Handler__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>Related Case internal Id</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Notification Handler</relationshipLabel>
    <relationshipName>Notification_Handler</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>