force-app/main/default/objects/Notification_Handler__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>For ex &quot;Notification will be sent for the case status as Open&quot;</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>